--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
+OPENAI_API_KEY= "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"
 MONGODB_URL ="mongodb+srv://snehilchhabria143:aol1I1MZp08nm1Ol@cluster007.e4qjvu4.mongodb.net/?retryWrites=true&w=majority"
