--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,6 @@
 OPENAI_API_KEY= "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"
 MONGODB_URL ="mongodb+srv://snehilchhabria143:aol1I1MZp08nm1Ol@cluster007.e4qjvu4.mongodb.net/?retryWrites=true&w=majority"
+
+CLOUDINARY_CLOUD_NAME = "dueyd7xg9"
+CLOUDINARY_API_KEY = "947788134418995"
+CLOUDINARY_API_SECRET = "O0cFC6U-ExDejTK3aD2cgXM8h8U"
